--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,4 +55,5 @@
     <string name="account">حساب کاربری</string>
     <string name="similar_products">محصولات مشابه</string>
     <string name="others_buy">دیگران خریده اند</string>
+    <string name="get_image">دریافت عکس</string>
 </resources>
